# microfish

./: Dockerfile  LICENSE  README.md  README_cn.md  docker-compose.yml  docker-compose_build.yml  pyproject.toml
.github/workflows/: docker.yml  pypi.yml
src/microfish/: auth.py  server.py  settings.py  tinyfish_client.py  tool_policy.py  tools.py
tests/: test_auth.py  test_container_files.py  test_docs.py  test_settings.py  test_tinyfish_fetch.py  test_tinyfish_search.py  test_tinyfish_usage.py  test_tool_definitions.py  test_tool_policy.py  test_workflows.py
