[project]
name = "microfish"
version = "0.1.0"
description = "A restricted TinyFish MCP gateway for free search and fetch capabilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "mcp>=1.12,<2",
    "pydantic>=2.8,<3",
    "pydantic-settings>=2.4,<3",
    "starlette>=0.37,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
microfish = "microfish.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/microfish"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "respx>=0.21,<1",
    "ruff>=0.6,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
